<resources>
    <string name="app_name">My Application</string>
    <string name="weather">Weather</string>
    <string name="enter_city">Enter city:</string>
    <string name="choose">Choose</string>
    <string name="city">City:</string>
    <string name="temperature">Temperature:</string>
    <string name="air_pressure">Air pressure:</string>
    <string name="wind_speed">Wind speed:</string>
</resources>